--- a/source/^.css
+++ b/source/^.css
@@ -2,14 +2,28 @@
 
 /*! minireset.css v0.0.3 | MIT License | github.com/jgthms/minireset.css */html,body,p,ol,ul,li,dl,dt,dd,blockquote,figure,fieldset,legend,textarea,pre,iframe,hr,h1,h2,h3,h4,h5,h6{margin:0;padding:0}h1,h2,h3,h4,h5,h6{font-size:100%;font-weight:normal}ul{list-style:none}button,input,select,textarea{margin:0}html{box-sizing:border-box}*,*:before,*:after{box-sizing:inherit}img,embed,iframe,object,audio,video{height:auto;max-width:100%}iframe{border:0}table{border-collapse:collapse;border-spacing:0}td,th{padding:0;text-align:left}
 
-body	{background:#f7f4fd; font-family:monospace, sans-serif; font-size:16px; line-height:24px; color:#eee; width:100%; padding:50px;}
+body	{background:#f7f4fd; font-family:'Open Sans', sans-serif; font-size:16px; line-height:24px; color:#eee; width:100%; padding:50px;}
 h1		{font-size:4em; font-weight:normal; color:#1400ff;}
 h2		{font-size:2em; font-weight:normal;}
 
 a		{color:#1400ff;}
+.osans	{font-family:'Open Sans', sans-serif;}
+.pay	{font-family:'Paytone One', sans-serif;}
 
-body	{background:url('data/wrong_drop.png');}
+body	{background:url('data/wrong_bw2.png')no-repeat; background-position:center center; -webkit-background-size:cover; -moz-background-size:cover; -o-background-size:cover; background-size:cover;}
 
-.blink	{animation:blinks 1s steps(1,end) 0s infinite;}
 
-@keyframes blinks {80%{opacity:0;}}
+/*	logo	*/
+
+.logo_wrap		{position:relative; width:480px; height:480px;}
+.half-circle	{position:absolute; top:0; left:0; width:480px; height:480px; border-radius:480px; border:15px solid #8c5959; border-top-right-radius:0; border-bottom-left-radius:0;}
+.half-circle.two{position:absolute; top:-80px; left:110px; border-bottom-right-radius:0; border-top-left-radius:0; border-bottom-left-radius:480px; border-top-right-radius:480px;}
+.wrong_white	{position:absolute; top:0; left:0; width:480px; height:480px; border-radius:480px; background:url('data/wrong_logo_500x500_black.png')no-repeat center center #FFF;}
+
+
+/*	introduction	*/
+
+.intro			{color:#ffffff; font-weight:bold; font-size:22px; line-height:32px; margin-top:40px;}
+.blink			{animation:blinks 1s steps(1,end) 0s infinite;}		@keyframes blinks {80%{opacity:0;}}
+
+
