--- a/source/^.css
+++ b/source/^.css
@@ -2,8 +2,8 @@
 
 /*! minireset.css v0.0.3 | MIT License | github.com/jgthms/minireset.css */html,body,p,ol,ul,li,dl,dt,dd,blockquote,figure,fieldset,legend,textarea,pre,iframe,hr,h1,h2,h3,h4,h5,h6{margin:0;padding:0}h1,h2,h3,h4,h5,h6{font-size:100%;font-weight:normal}ul{list-style:none}button,input,select,textarea{margin:0}html{box-sizing:border-box}*,*:before,*:after{box-sizing:inherit}img,embed,iframe,object,audio,video{height:auto;max-width:100%}iframe{border:0}table{border-collapse:collapse;border-spacing:0}td,th{padding:0;text-align:left}
 
-body	{background:#6F3042; font-family:'Open Sans', sans-serif; font-size:16px; line-height:24px; color:#eee; width:100%; padding:50px;}
-body	{background:url('data/wrong_bw2.png')no-repeat; background-position:center center; -webkit-background-size:cover; -moz-background-size:cover; -o-background-size:cover; background-size:cover;}
+body	{background:#0900ff; font-family:'Open Sans', sans-serif; font-size:16px; line-height:24px; color:#eee; width:100%; padding:50px;}
+/*body	{background:url('data/wrong_bw2.png')no-repeat; background-position:center center; -webkit-background-size:cover; -moz-background-size:cover; -o-background-size:cover; background-size:cover;}*/
 
 
 /*
@@ -33,9 +33,9 @@ a		{color:#1400ff;}
 
 */
 
-.logo_wrap		{position:relative; width:480px; height:480px;}
-.half-circle	{position:absolute; top:0; left:0; width:480px; height:480px; border-radius:480px; border:15px solid #8c5959; border-top-right-radius:0; border-bottom-left-radius:0;}
-.half-circle.two{position:absolute; top:-80px; left:110px; border-bottom-right-radius:0; border-top-left-radius:0; border-bottom-left-radius:480px; border-top-right-radius:480px;}
+.logo_wrap		{position:relative; width:480px; height:480px; margin:0 auto;}
+.half-circle	{display:none; position:absolute; top:0; left:0; width:480px; height:480px; border-radius:480px; border:15px solid #8c5959; border-top-right-radius:0; border-bottom-left-radius:0;}
+.half-circle.two{display:none; position:absolute; top:-80px; left:110px; border-bottom-right-radius:0; border-top-left-radius:0; border-bottom-left-radius:480px; border-top-right-radius:480px;}
 .wrong_white	{position:absolute; top:0; left:0; width:480px; height:480px; border-radius:480px; background:url('data/wrong_logo_500x500_black.png')no-repeat center center #FFF;}
 
 
