--- a/source/^.css
+++ b/source/^.css
@@ -17,7 +17,7 @@ body	{background:#0900ff; font-family:'Open Sans', sans-serif; font-size:22px; l
 
 h1		{font-size:4em; font-weight:normal; color:#1400ff;}
 h2		{font-size:2em; font-weight:normal;}
-a		{color:#1400ff;}
+a		{color:#1400ff; -webkit-transition:all .2s ease-in-out; -moz-transition:all .2s ease-in-out; -o-transition:all .2s ease-in-out; -ms-transition:all .2s ease-in-out; transition:all .2s ease-in-out;}
 .osans	{font-family:'Open Sans', sans-serif;}
 .pay	{font-family:'Paytone One', sans-serif;}
 
