--- a/source/^.css
+++ b/source/^.css
@@ -39,8 +39,11 @@ a		{color:#1400ff; -webkit-transition:all .2s ease-in-out; -moz-transition:all .
 .sect.fff		{background:#fff;}
 
 .top_wrap		{margin:0 auto; padding:50px 0; width:960px;}
-.spiel_wrap		{display:inline-block; vertical-align:middle; width:725px; margin:0 auto; padding:0px 0 0 50px; box-sizing:border-box;}
+.spiel_wrap		{display:inline-block; vertical-align:middle; width:666px; margin:0 auto; padding:0px 0 0 50px; box-sizing:border-box;}
 .spiel_wrap	p	{margin-bottom:20px; font-family:mono;}
+.spiel_wrap span	{text-shadow:0px 1px 15px #000000b3;}
+.spiel_wrap.two		{width:740px; padding:0;}
+.spiel_wrap.two	div	{padding-top:10px;}
 .spiel_wrap.two	p	{background-color:#fff2ac; display:inline; color:#111;}
 
 .intro			{color:#ffffff; font-weight:bold; font-size:22px; line-height:32px; margin-top:40px;}
